feat:虚拟线程参数调整